// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatorTable component CreatorTable renders 1x1 table, center aligned, no header 1`] = `
<div
  className="table"
>
  <form>
    <div
      className="table-elements"
    >
      <table
        onBlur={[Function]}
      >
        <tbody>
          <tr>
            <td
              className="center-align  "
            >
              <div
                className="cell"
                onKeyDown={[Function]}
              >
                <input
                  className="row-0 col-0"
                  onChange={[Function]}
                  placeholder="A1"
                  type="text"
                  value=""
                />
                <div
                  className="checkbox"
                  onClick={[Function]}
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="checkbox"
                  />
                  Hide
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <button
        hidden={true}
      />
      <div
        className="column-buttons"
      >
        <button
          onClick={[Function]}
        >
          <svg
            height="28"
            id="svg"
            version="1.1"
            viewBox="0 0 400 400"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              id="svgg"
            >
              <path
                d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M213.333 160.000 C 213.333 177.778,222.222 186.667,240.000 186.667 C 254.667 186.667,266.667 192.667,266.667 200.000 C 266.667 207.333,254.667 213.333,240.000 213.333 C 222.222 213.333,213.333 222.222,213.333 240.000 C 213.333 254.667,207.333 266.667,200.000 266.667 C 192.667 266.667,186.667 254.667,186.667 240.000 C 186.667 222.222,177.778 213.333,160.000 213.333 C 145.333 213.333,133.333 207.333,133.333 200.000 C 133.333 192.667,145.333 186.667,160.000 186.667 C 177.778 186.667,186.667 177.778,186.667 160.000 C 186.667 145.333,192.667 133.333,200.000 133.333 C 207.333 133.333,213.333 145.333,213.333 160.000 "
                id="path0"
              />
            </g>
          </svg>
        </button>
        <button
          onClick={[Function]}
        >
          <svg
            height="28"
            id="svg"
            version="1.1"
            viewBox="0, 0, 400,400"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              id="svgg"
            >
              <path
                d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M280.000 200.000 C 280.000 207.407,244.444 213.333,200.000 213.333 C 155.556 213.333,120.000 207.407,120.000 200.000 C 120.000 192.593,155.556 186.667,200.000 186.667 C 244.444 186.667,280.000 192.593,280.000 200.000 "
                id="path0"
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
    <div
      className="row-buttons"
    >
      <button
        onClick={[Function]}
      >
        <svg
          height="28"
          id="svg"
          version="1.1"
          viewBox="0 0 400 400"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            id="svgg"
          >
            <path
              d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M213.333 160.000 C 213.333 177.778,222.222 186.667,240.000 186.667 C 254.667 186.667,266.667 192.667,266.667 200.000 C 266.667 207.333,254.667 213.333,240.000 213.333 C 222.222 213.333,213.333 222.222,213.333 240.000 C 213.333 254.667,207.333 266.667,200.000 266.667 C 192.667 266.667,186.667 254.667,186.667 240.000 C 186.667 222.222,177.778 213.333,160.000 213.333 C 145.333 213.333,133.333 207.333,133.333 200.000 C 133.333 192.667,145.333 186.667,160.000 186.667 C 177.778 186.667,186.667 177.778,186.667 160.000 C 186.667 145.333,192.667 133.333,200.000 133.333 C 207.333 133.333,213.333 145.333,213.333 160.000 "
              id="path0"
            />
          </g>
        </svg>
      </button>
      <button
        onClick={[Function]}
      >
        <svg
          height="28"
          id="svg"
          version="1.1"
          viewBox="0, 0, 400,400"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            id="svgg"
          >
            <path
              d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M280.000 200.000 C 280.000 207.407,244.444 213.333,200.000 213.333 C 155.556 213.333,120.000 207.407,120.000 200.000 C 120.000 192.593,155.556 186.667,200.000 186.667 C 244.444 186.667,280.000 192.593,280.000 200.000 "
              id="path0"
            />
          </g>
        </svg>
      </button>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</div>
`;

exports[`CreatorTable component CreatorTable renders 1x1 table, left aligned, header 1`] = `
<div
  className="table"
>
  <form>
    <div
      className="table-elements"
    >
      <table
        onBlur={[Function]}
      >
        <tbody>
          <tr>
            <td
              className=" header-cell "
            >
              <div
                className="cell"
                onKeyDown={[Function]}
              >
                <input
                  className="row-0 col-0"
                  onChange={[Function]}
                  placeholder="A1"
                  type="text"
                  value=""
                />
                <div
                  className="checkbox"
                  onClick={[Function]}
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="checkbox"
                  />
                  Hide
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <button
        hidden={true}
      />
      <div
        className="column-buttons"
      >
        <button
          onClick={[Function]}
        >
          <svg
            height="28"
            id="svg"
            version="1.1"
            viewBox="0 0 400 400"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              id="svgg"
            >
              <path
                d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M213.333 160.000 C 213.333 177.778,222.222 186.667,240.000 186.667 C 254.667 186.667,266.667 192.667,266.667 200.000 C 266.667 207.333,254.667 213.333,240.000 213.333 C 222.222 213.333,213.333 222.222,213.333 240.000 C 213.333 254.667,207.333 266.667,200.000 266.667 C 192.667 266.667,186.667 254.667,186.667 240.000 C 186.667 222.222,177.778 213.333,160.000 213.333 C 145.333 213.333,133.333 207.333,133.333 200.000 C 133.333 192.667,145.333 186.667,160.000 186.667 C 177.778 186.667,186.667 177.778,186.667 160.000 C 186.667 145.333,192.667 133.333,200.000 133.333 C 207.333 133.333,213.333 145.333,213.333 160.000 "
                id="path0"
              />
            </g>
          </svg>
        </button>
        <button
          onClick={[Function]}
        >
          <svg
            height="28"
            id="svg"
            version="1.1"
            viewBox="0, 0, 400,400"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              id="svgg"
            >
              <path
                d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M280.000 200.000 C 280.000 207.407,244.444 213.333,200.000 213.333 C 155.556 213.333,120.000 207.407,120.000 200.000 C 120.000 192.593,155.556 186.667,200.000 186.667 C 244.444 186.667,280.000 192.593,280.000 200.000 "
                id="path0"
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
    <div
      className="row-buttons"
    >
      <button
        onClick={[Function]}
      >
        <svg
          height="28"
          id="svg"
          version="1.1"
          viewBox="0 0 400 400"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            id="svgg"
          >
            <path
              d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M213.333 160.000 C 213.333 177.778,222.222 186.667,240.000 186.667 C 254.667 186.667,266.667 192.667,266.667 200.000 C 266.667 207.333,254.667 213.333,240.000 213.333 C 222.222 213.333,213.333 222.222,213.333 240.000 C 213.333 254.667,207.333 266.667,200.000 266.667 C 192.667 266.667,186.667 254.667,186.667 240.000 C 186.667 222.222,177.778 213.333,160.000 213.333 C 145.333 213.333,133.333 207.333,133.333 200.000 C 133.333 192.667,145.333 186.667,160.000 186.667 C 177.778 186.667,186.667 177.778,186.667 160.000 C 186.667 145.333,192.667 133.333,200.000 133.333 C 207.333 133.333,213.333 145.333,213.333 160.000 "
              id="path0"
            />
          </g>
        </svg>
      </button>
      <button
        onClick={[Function]}
      >
        <svg
          height="28"
          id="svg"
          version="1.1"
          viewBox="0, 0, 400,400"
          width="28"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            id="svgg"
          >
            <path
              d="M85.333 85.333 C 19.189 151.478,19.189 248.522,85.333 314.667 C 190.592 419.925,360.000 349.202,360.000 200.000 C 360.000 50.798,190.592 -19.925,85.333 85.333 M280.000 200.000 C 280.000 207.407,244.444 213.333,200.000 213.333 C 155.556 213.333,120.000 207.407,120.000 200.000 C 120.000 192.593,155.556 186.667,200.000 186.667 C 244.444 186.667,280.000 192.593,280.000 200.000 "
              id="path0"
            />
          </g>
        </svg>
      </button>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</div>
`;
